version/0.12/_sources/api/solver/_autosummary/settings/pseudo_time_method.rst.txt
:orphan:

.. _pseudo_time_method:

pseudo_time_method
==================

.. currentmodule:: ansys.fluent.core.solver.settings_231.pseudo_time_method

.. autoclass:: pseudo_time_method
    :show-inheritance:
    :undoc-members:
.. rubric:: Children

======================================================================================================   ==============================================================================================================================================================

Child                                                                                                                                                                                                                                                           Summary

======================================================================================================   ==============================================================================================================================================================
:ref:`formulation <formulation>`                                                                                                                                                               Select the pseudo time step size formulation for the pseudo time method.

:ref:`relaxation_method <relaxation_method_1>`                                                                                                                                                                     Select relaxation definition for pseudo time method.

:ref:`convergence_acceleration_for_stretched_meshes <convergence_acceleration_for_stretched_meshes_1>`       Enable convergence acceleration for stretched meshes to improve the convergence of the implicit pressure based solver on meshes with high cell stretching.

======================================================================================================   ==============================================================================================================================================================

.. rubric:: Commands

============================================   =============================================================

Command                                                                                              Summary

============================================   =============================================================
:ref:`relaxation_bounds <relaxation_bounds>`       Select relaxation bounding scheme for pseudo time method.

============================================   =============================================================

.. rubric:: Included in:

==========================   ====================

Parent                                    Summary

==========================   ====================
:ref:`methods <methods_1>`       'methods' child.

==========================   ====================

