version/0.27/_sources/api/solver/_autosummary/settings/pseudo_time_method.rst.txt
:orphan:

.. _pseudo_time_method:

pseudo_time_method
==================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.pseudo_time_method
    :show-inheritance:

.. rubric:: Attributes

======================================================================================================   ==============================================================================================================================================================

Attribute                                                                                                                                                                                                                                                       Summary

======================================================================================================   ==============================================================================================================================================================
:ref:`formulation <formulation_1>`                                                                                                                                                             Select the pseudo time step size formulation for the pseudo time method.

:ref:`relaxation_method <relaxation_method>`                                                                                                                                                                       Select relaxation definition for pseudo time method.

:ref:`convergence_acceleration_for_stretched_meshes <convergence_acceleration_for_stretched_meshes_1>`       Enable convergence acceleration for stretched meshes to improve the convergence of the implicit pressure based solver on meshes with high cell stretching.

======================================================================================================   ==============================================================================================================================================================

.. rubric:: Methods

============================================   =============================================================

Method                                                                                               Summary

============================================   =============================================================
:ref:`relaxation_bounds <relaxation_bounds>`       Select relaxation bounding scheme for pseudo time method.

============================================   =============================================================

.. rubric:: Included in:

============================   ====================================

Parent                                                      Summary

============================   ====================================
:ref:`methods_1 <methods_1>`       Enter the solution methods menu.

============================   ====================================

